--- a/wk01-lab-exercise-files/book.css
+++ b/wk01-lab-exercise-files/book.css
@@ -9,14 +9,19 @@ body {
 h1 {
 	margin: 0;
 	padding: .25em;
-	font-size: 200%;
-	color: navy;
+	font-size: 180%;
+	color: red;
 }
 img  {
-	float: left;
+	float: right;
 	margin: 0 1em;
 }
 p {
 	margin: 0;
 	padding-bottom: .5em;
+}
+
+#service {
+	color: red;
+	clear: both;
 }
