--- a/html-css/book.css
+++ b/html-css/book.css
@@ -9,8 +9,8 @@ body {
 h1 {
 	margin: 0;
 	padding: .25em;
-	font-size: 200%;
-	color: navy;
+	font-size: 180%;
+	color: red;
 }
 img  {
 	float: left;
