--- a/html-css/wk02-lab-exercise-files/styles/main.css
+++ b/html-css/wk02-lab-exercise-files/styles/main.css
@@ -26,4 +26,32 @@ main {
 	clear: left;
 }
 
+main h1 {
+	font-size: 150%;
+}
+
+main h2 {
+	font-size: 130%;
+	color: #800000;
+}
+
+main h3 {
+	font-size: 105%;
+}
+
+a:focus {
+	font-style: italic;
+}
+
+a:hover {
+	font-style: italic;
+}
 /* the styles for the footer */
+
+footer p {
+	text-align: center;
+}
+
+.shadow {
+	text-shadow: 2px 2px #800000;
+}
