Made all CSS changes 7-11 in exercise 4-1

--- a/html-css/wk02-lab-exercise-files/styles/main.css
+++ b/html-css/wk02-lab-exercise-files/styles/main.css
@@ -4,20 +4,29 @@ body {
     font-size: 100%;
 }
 
+
+
 /* the styles for the header */
 header img {
 	float: left;
 }
+h1{
+	font-size: 150%;
+
+}
 h2{
-	font-size:170%;
+	font-size:130%;
 	color: #800000;
 	text-indent: 30px;
 }
 h3{
-	font-size:130%;
-	font-style: italic;
+
+	font-size:105%;
+	font-style: Bold;
 	text-indent: 30px;
 }
+
+a:hover {font-style: italic;}
 
 /* the styles for the section */
 main {
@@ -25,3 +34,6 @@ main {
 }
 
 /* the styles for the footer */
+footer p{
+	text-align:center;
+}
