--- a/html-css/wk02-lab-exercise-files/styles/main.css
+++ b/html-css/wk02-lab-exercise-files/styles/main.css
@@ -1,3 +1,7 @@
+html {
+	background-color: white;
+}
+
 /* the styles for the elements */
 body {
 	font-family: Arial, Helvetica, sans-serif;
@@ -5,6 +9,7 @@ body {
 	width: 600px;
 	margin: 0px auto;
 	border: 3px solid #931240;
+	background-color: #fffded;
 }
 
 /* the styles for the header */
