added bottom border to header

--- a/html-css/wk02-lab-exercise-files/styles/main.css
+++ b/html-css/wk02-lab-exercise-files/styles/main.css
@@ -13,6 +13,10 @@ body {
 }
 
 /* the styles for the header */
+header {
+	border-bottom: 3px solid #931240;
+}
+
 header h2 {
 	font-size: 170%;
 	color: #800000;
