--- a/html-css/wk02-lab-exercise-files/styles/main.css
+++ b/html-css/wk02-lab-exercise-files/styles/main.css
@@ -1,4 +1,8 @@
 /* the styles for the elements */
+*{
+	margin: 0;
+	padding: 0;
+}
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
