added card content

--- a/html-css/wk02-bootstrap-example/assets/css/main.css
+++ b/html-css/wk02-bootstrap-example/assets/css/main.css
@@ -6,3 +6,11 @@
     text-align: center;
     margin: 72px auto;
 }
+
+.card-section {
+    padding: 72px;
+}
+
+#transportation {
+    background-color: #ffbe76;
+}
