made code responsive

--- a/html-css/wk02-bootstrap-example/assets/css/main.css
+++ b/html-css/wk02-bootstrap-example/assets/css/main.css
@@ -14,3 +14,12 @@
 #transportation {
     background-color: #ffbe76;
 }
+
+.card {
+    margin: 0 auto;
+}
+
+#list {
+    padding: 72px;
+    background-color:#cecece;
+}
