--- a/html-css/wk03-lab-exercise-files/styles/main.css
+++ b/html-css/wk03-lab-exercise-files/styles/main.css
@@ -1,7 +1,8 @@
 /* the styles for the elements */
 body {
 	font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
+	font-size: 100%;
+	width: 800px;
 }
 
 /* the styles for the header */
