--- a/html-css/wk03-lab-exercise-files/styles/main.css
+++ b/html-css/wk03-lab-exercise-files/styles/main.css
@@ -3,6 +3,11 @@
 	margin: 0;
 	padding: 0;
 }
+nav ul{
+	list-style-type: none;
+	margin: 0px;
+	padding: 0px;
+}
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
