--- a/html-css/wk03-lab-exercise-files/styles/main.css
+++ b/html-css/wk03-lab-exercise-files/styles/main.css
@@ -8,6 +8,9 @@ nav ul{
 	margin: 0px;
 	padding: 0px;
 }
+nav ul li{
+	float: left;
+}
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
