--- a/html-css/wk03-lab-exercise-files/styles/c6_main.css
+++ b/html-css/wk03-lab-exercise-files/styles/c6_main.css
@@ -65,6 +65,9 @@ nav ul li a{
 	color: white;
 	font-weight: bold;
 }
+.current{
+	color: yellow;
+}
 /* the styles for the main content */
 main {
 	clear: left;
