--- a/html-css/wk03-lab-exercise-files/styles/c6_main.css
+++ b/html-css/wk03-lab-exercise-files/styles/c6_main.css
@@ -46,6 +46,9 @@ header img {
 	text-shadow: 2px 2px 2px #800000;
 }
 /* the styles for the Nav element*/
+nav {
+	position: relative;
+}
 nav ul {
 	list-style-type: none;
 }
@@ -64,6 +67,16 @@ nav ul li a{
 	background-color: #800000;
 	color: white;
 	font-weight: bold;
+}
+#nav_menu ul ul{
+	display:none;
+	position: absolute;
+	top: 100%;
+}
+#nav_menu ul li:hover>ul{
+	display: block;
+	position: absolute;
+	top: 100%;
 }
 .current{
 	color: yellow;
