updated bullet type and added video

--- a/html-css/wk03-lab-exercise-files/styles/main.css
+++ b/html-css/wk03-lab-exercise-files/styles/main.css
@@ -129,6 +129,7 @@ section blockquote {
 }
 section ul {
 	padding: 0 0 .25em 1.25em;
+	list-style-type: circle;
 }
 section li {
 	padding-bottom: .35em;
