--- a/html-css/wk03-lab-exercise-files/styles/c6_main.css
+++ b/html-css/wk03-lab-exercise-files/styles/c6_main.css
@@ -72,9 +72,15 @@ nav ul li a{
 	display:none;
 	position: absolute;
 	top: 100%;
-}
+	float: none;
+	}
 #nav_menu ul li:hover>ul{
 	display: block;
+	}
+#nav_menu >ul::after{
+	content:"";
+	display:block;
+	clear: both;
 }
 .current{
 	color: yellow;
