completed sets thru 20

--- a/html-css/wk03-lab-exercise-files/styles/c6_main.css
+++ b/html-css/wk03-lab-exercise-files/styles/c6_main.css
@@ -118,6 +118,9 @@ section ul {
 section li {
 	padding-bottom: .35em;
 }
+ul{
+	list-style-type: circle;
+}
 
 /* the styles for the article */
 article {
