--- a/html-css/wk03-assignment-exercise-files/styles/main.css
+++ b/html-css/wk03-assignment-exercise-files/styles/main.css
@@ -9,7 +9,9 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 800px;
+	/*width: 800px;*/
+	width: 98%;
+	max-width: 960px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
@@ -40,11 +42,13 @@ header h3 {
 }
 header img {
 	float: left;
-	padding: 0 30px;
+	/*padding: 0 30px;*/
+	padding: 0 3.25%;
 }
 .shadow {
 	text-shadow: 2px 2px 2px #800000;
 }
+
 /* the styles for the navigation menu */
 #nav_menu ul {
 	list-style-type: none;
@@ -54,12 +58,15 @@ header img {
 }
 #nav_menu ul li {
 	float: left;
+	width: 20%;
 }
+
 #nav_menu ul li a {
     display: block;
-    width: 160px;
+	/* width: 160px; */
+	width: 100%;
     text-align: center;
-    padding: 1em 0;
+	padding: 1em 0;
     text-decoration: none;
     background-color: #800000;
     color: white;
@@ -71,19 +78,28 @@ header img {
 #nav_menu ul ul {
     display: none;
     position: absolute;
-    top: 100%;
+	top: 100%;
+	width: 100%;
+	background-color: pink;
 }
 #nav_menu ul ul li {
 	float: none;
+	width: 100%;
 }
 #nav_menu ul li:hover > ul {
 	display: block;
+	width: 20%;
 }
 #nav_menu > ul::after {
     content: "";
     clear: both;
     display: block;
 }
+
+#mobile_menu {
+	display: none;
+}
+
 /* the styles for the main content */
 main {
 	clear: left;
@@ -91,9 +107,12 @@ main {
 
 /* the styles for the section */
 section {
-	width: 525px;
+	/*width: 525px;*/
+	width: 54.69%;
 	float: right;
-	padding: 0 20px 20px 20px;
+	/*padding: 0 20px 20px 20px;*/
+	padding: 0 2.1% 2.1% 2.1%;
+	width: 
 }
 section h1 {
 	font-size: 150%;
@@ -135,15 +154,20 @@ article h3 {
 }
 article img {
 	float: right;
+	min-width: 150px;
+	/* max-width: 40%; */
+	max-width: 30%;
 	margin: .5em 0 1em 1em;
 	border: 1px solid black;
 }
 
 /* the styles for the aside */
 aside {
-	width: 215px;
+	/*width: 215px;*/
+	width: 23.4%;
 	float: right;
-	padding: 0 0 20px 20px;
+	/*padding: 0 0 20px 20px;*/
+	padding: 0 0 2.1% 2.1%;
 }
 aside h2 {
 	color: #800000;
@@ -159,6 +183,12 @@ aside img {
 	padding-bottom: 1em;
 }
 
+/*
+aside .speakers {
+	column-count: 2;
+}
+*/
+
 /* the styles for the footer */
 footer {
 	background-color: #931420;
@@ -170,3 +200,77 @@ footer p {
 	color: white;
 	padding: 1em 0;
 }
+
+/* Media Queries */
+@media screen and (max-width: 959px){
+	section h1 {
+		font-size: 135%;
+	}
+
+	section h2 {
+		font-size: 120%;
+	}
+
+	aside h2 {
+		font-size: 120%;
+	}
+}
+
+@media screen and (max-width: 767px) {
+	#nav_menu {
+		display: none;
+	}
+
+	#mobile_menu {
+		display: block;
+	}
+
+	.slicknav_menu {
+		background: #800000 !important;
+	}
+
+
+	header img {
+		/* clear: both; */
+		float: none;
+	}
+
+	header h2, header h3 {
+		text-align: center;
+	}
+	
+	section, aside {
+		float: none;
+		width: 95.8%;
+	}
+
+	aside {
+		padding-right: 2.1%;
+	}
+
+	aside .speakers {
+		column-count: 2;
+	}
+}
+
+@media screen and (max-width: 479px) {
+	body {
+		font-size: 90%;
+	}
+}
+
+
+
+/* hide the mobile menu */
+/*
+#mobile_menu {
+	display: none;
+}
+*/
+
+/* Display mobile menu */
+/*
+#mobile_menu {
+	display: block;
+}
+*/
