--- a/html-css/wk03-assignment-exercise-files/styles/c7_main.css
+++ b/html-css/wk03-assignment-exercise-files/styles/c7_main.css
@@ -9,7 +9,8 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 800px;
+    width: 98%;
+	max-width: 960px; 
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
